--- a/CleanArchMvc.WebUI/Views/Products/Index.cshtml
+++ b/CleanArchMvc.WebUI/Views/Products/Index.cshtml
@@ -18,7 +18,7 @@
         <div>
             <div class="pull-left">
                 <a asp-action="Create" class="btn btn-primary">
-                    <span title="Add Product" class="fas fa-plus"></span> Add products
+                    <span title="Add Product" class="fas fa-plus">Add products</span>
                 </a>
             </div>
         </div>
@@ -38,6 +38,15 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Price)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Stock)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Image)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CategoryId)
+                </th>
                 <th></th>
             </tr>
         </thead>
@@ -55,12 +64,23 @@
                         @Html.DisplayFor(modelItem => item.Price)
                     </td>
                     <td>
+                        @Html.DisplayFor(modelItem => item.Stock)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Image)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CategoryId)
+                    </td>
+                    <td>
                         <a asp-action="Edit" asp-route-id="@item.Id" title="Edit" class="btn btn-warning">
                             <span class="fas fa-edit">Edit</span>
                         </a>
-                        <a asp-action="Details" asp-route-id="@item.Id" title="Details" class="btn btn-secondary">
+
+                        <a asp-action="Details" asp-route-id="@item.Id" title="Details" class="btn btn-primary">
                             <span class="fas fa-search">Details</span>
                         </a>
+
                         <a asp-action="Delete" asp-route-id="@item.Id" title="Delete" class="btn btn-danger">
                             <span class="fas fa-trash-alt">Delete</span>
                         </a>
