--- a/CleanArchMvc.WebUI/Views/Products/Index.cshtml
+++ b/CleanArchMvc.WebUI/Views/Products/Index.cshtml
@@ -77,7 +77,7 @@
                             <span class="fas fa-edit">Edit</span>
                         </a>
 
-                        <a asp-action="Details" asp-route-id="@item.Id" title="Details" class="btn btn-primary">
+                        <a asp-action="Details" asp-route-id="@item.Id" title="Details" class="btn btn-secondary">
                             <span class="fas fa-search">Details</span>
                         </a>
 
