--- a/CleanArchMvc.WebUI/Views/Products/Create.cshtml
+++ b/CleanArchMvc.WebUI/Views/Products/Create.cshtml
@@ -1,69 +1,57 @@
 ﻿@model CleanArchMvc.Application.DTOs.ProductDTO
+@{
+    ViewData["title"] = "Register new Product";
+}
 
-<h2>Register new Product</h2>
+<div class="container bg-primary p-5 rounded-3">
 
-<form asp-action="Create">
+    <div class="mb-3 text-center">
+        <h1 class="text-light">Register new Product</h1>
+    </div>
 
-    <div class="form-horizontal">
-
-        <hr />
-
-        <div asp-validation-summary="All" class="text-danger"></div>
-
-        <div class="form-group">
-            <label asp-for="Name" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+    <form method="post" asp-controller="Products" asp-action="Create">
+        <div class="mb-3">
+            <label asp-for="Name" class="form-label text-light">Name: </label>
+            <input type="text" class="form-control" asp-for="Name" id="Name" placeholder="Name of Product">
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
 
-        <div class="form-group">
-            <label asp-for="Description" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
+        <div class="mb-3">
+            <label asp-for="Description" class="form-label text-light">Description: </label>
+            <input type="text" class="form-control" asp-for="Description" id="Description" placeholder="Description of Product">
+            <span asp-validation-for="Description" class="text-danger"></span>
         </div>
 
-        <div class="form-group">
-            <label asp-for="Image" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
-            </div>
+        <div class="mb-3">
+            <label asp-for="Image" class="form-label text-light">Image: </label>
+            <input type="text" class="form-control" asp-for="Image" id="Image" placeholder="Image of Product">
+            <span asp-validation-for="Image" class="text-danger"></span>
         </div>
 
-        <div class="form-group">
-            <label asp-for="Price" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Price" class="form-control" />
+        <div class="row mb-3">
+            <div class="col">
+                <label asp-for="Price" class="form-label text-light">Price: </label>
+                <input type="text" class="form-control" asp-for="Price" id="Price" placeholder="Price of Product">
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="Stock" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Stock" class="form-control" />
+            <div class="col">
+                <label asp-for="Stock" class="form-label text-light">Stock: </label>
+                <input type="text" class="form-control" asp-for="Stock" id="Stock" placeholder="How much in Stock of Products">
                 <span asp-validation-for="Stock" class="text-danger"></span>
             </div>
         </div>
 
-
-        <div class="form-group">
-            <label asp-for="CategoryId" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"> </select>
-            </div>
+        <div class="mb-3">
+            <label asp-for="CategoryId" class="form-label text-light">Category: </label>
+            <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
         </div>
-        <br />
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-success" />
-                <a asp-action="Index" class="btn btn-info">Back to List</a>
-            </div>
+        <div class="d-flex gap-5 mt-5">
+            <button type="submit" class="btn btn-success w-50">Create</button>
+            <a class="btn btn-info w-50" asp-controller="Products" asp-action="Index">Back To List</a>
         </div>
-    </div>
-</form>
+    </form>
+</div>
+<br />
+<br />
+<br />
