--- a/CleanArchMvc.WebUI/Views/Products/Delete.cshtml
+++ b/CleanArchMvc.WebUI/Views/Products/Delete.cshtml
@@ -1,51 +1,51 @@
 ﻿@model CleanArchMvc.Application.DTOs.ProductDTO
-<h3>Delete Product</h3>
-<h5>Are you sure you want delete this?</h5>
-<div>
-    <hr />
-    <dl class="row">
-        <dl class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dl>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dl class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dl>
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dl class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dl>
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dl class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Stock)
-        </dl>
-        <dd>
-            @Html.DisplayFor(model => model.Stock)
-        </dd>
-        <dl class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dl>
-        <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-        <dl class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryId)
-        </dl>
-        <dd>
-            @Html.DisplayFor(model => model.CategoryId)
-        </dd>
-    </dl>
 
+<div class="container bg-primary p-5 rounded-3">
 
-    <form asp-action="Delete">
+    <div class="mb-3 text-center">
+        <h1 class="text-light">Delete Product</h1>
+        <h3 class="text-light">Are you sure to delete this?</h3>
+    </div>
+
+    <form method="post" asp-controller="Products" asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="Index">Back To List</a>
+        <div class="mb-3">
+            <label asp-for="Name" class="form-label text-light">Name: </label>
+            <input type="text" class="form-control" asp-for="Name" id="Name" readonly>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Description" class="form-label text-light">Description: </label>
+            <input type="text" class="form-control" asp-for="Description" id="Description" readonly>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Image" class="form-label text-light">Image: </label>
+            <input type="text" class="form-control" asp-for="Image" id="Image" readonly>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col">
+                <label asp-for="Price" class="form-label text-light">Price: </label>
+                <input type="text" class="form-control" asp-for="Price" id="Price" readonly>
+            </div>
+            <div class="col">
+                <label asp-for="Stock" class="form-label text-light">Stock: </label>
+                <input type="text" class="form-control" asp-for="Stock" id="Stock" readonly>
+            </div>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="CategoryId" class="form-label text-light">Category: </label>
+            <input type="text" class="form-control" value="@ViewData["CategoryName"]" readonly>
+        </div>
+
+        <div class="d-flex gap-5 mt-5">
+            <button type="submit" class="btn btn-danger w-50">Delete</button>
+            <a class="btn btn-info w-50" asp-controller="Products" asp-action="Index">Back To List</a>
+        </div>
     </form>
 </div>
+<br />
+<br />
+<br />
