--- a/CleanArchMvc.WebUI/Views/Products/Details.cshtml
+++ b/CleanArchMvc.WebUI/Views/Products/Details.cshtml
@@ -1,49 +1,95 @@
 ﻿@model CleanArchMvc.Application.DTOs.ProductDTO
 
-<h3>Product Details</h3>
+<div class="container bg-primary p-5 rounded-3">
+    <div class="mb-3 text-center">
+        <h1 class="text-light">Details Product</h1>
+    </div>
 
+    <form method="get" asp-controller="Products" asp-action="Details">
+        <input type="hidden" asp-for="Id" />
+        <div class="mb-3">
+            <label asp-for="Name" class="form-label text-light">Name: </label>
+            <input type="text" class="form-control" asp-for="Name" id="Name" readonly>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Description" class="form-label text-light">Description: </label>
+            <input type="text" class="form-control" asp-for="Description" id="Description" readonly>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="CategoryId" class="form-label text-light">Category: </label>
+            <input type="text" class="form-control" value="@ViewData["CategoryName"]" readonly>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col-6">
+                <div class="mb-3">
+                    <label asp-for="Price" class="form-label text-light">Price: </label>
+                    <input type="text" class="form-control" asp-for="Price" id="Price" readonly>
+                </div>
+                <div class="mb-3">
+                    <label asp-for="Stock" class="form-label text-light">Stock: </label>
+                    <input type="text" class="form-control" asp-for="Stock" id="Stock" readonly>
+                </div>
+            </div>
+            <div class="col-5 d-flex justify-content-end">
+                <dt class="text-light">@Html.DisplayNameFor(model => model.Image):</dt>
+                <dd class="mb-0">
+                    @if (!ViewBag.ImageExist)
+                    {
+                        <img src="~/images/noimage.png" class="rounded-circle" height="250" width="250" asp-append-version="true" />
+                    }
+                    else
+                    {
+                        <img src="~/images/@Model.Image" class="rounded-circle" height="250" width="250" asp-append-version="true" />
+                    }
+                </dd>
+            </div>
+        </div>
+
+        <div class="d-flex gap-5 mt-5">
+            <a class="btn btn-warning w-50" asp-controller="Products" asp-route-id="@Model.Id" asp-action="Edit">Edit</a>
+            <a class="btn btn-info w-50" asp-controller="Products" asp-action="Index">Back To List</a>
+        </div>
+    </form>
+</div>
+<br />
+<br />
+<br />
+
+
+
+@* <h3>Product Details</h3>
 <div>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)           
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Name)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Name)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Description)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Description)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Image)</dt>
+        <dd class="col-sm-10">
+            @if (!ViewBag.ImageExist)
+            {
+                <img src="~/images/noimage.png" class="rounded-circle"
+                     height="300" width="300" asp-append-version="true" />
+            }
+            else
+            {
+                <img src="~/images/@Model.Image" class="rounded-circle"
+                     height="300" width="300" asp-append-version="true" />
+            }
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Stock)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Stock)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CategoryId)
-        </dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Price)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Price)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Stock)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Stock)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Category)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Category.Name)</dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
-    <a asp-action="Index">Back To List</a>
-</div>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a> |
+    <a asp-action="Index">Back to List</a>
+</div> *@
