--- a/CleanArchMvc.WebUI/Views/Products/Edit.cshtml
+++ b/CleanArchMvc.WebUI/Views/Products/Edit.cshtml
@@ -1,45 +1,55 @@
 ﻿@model CleanArchMvc.Application.DTOs.ProductDTO
-<h3>Edit Product</h3>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+
+<div class="container bg-primary p-5 rounded-3">
+
+    <div class="mb-3 text-center">
+        <h1 class="text-light">Edit Product</h1>
+    </div>
+
+    <form method="post" asp-controller="Products" asp-action="Edit">
+        <input type="hidden" asp-for="Id"/>
+        <div class="mb-3">
+            <label asp-for="Name" class="form-label text-light">Name: </label>
+            <input type="text" class="form-control" asp-for="Name" id="Name" placeholder="Name of Product">
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Description" class="form-label text-light">Description: </label>
+            <input type="text" class="form-control" asp-for="Description" id="Description" placeholder="Description of Product">
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Image" class="form-label text-light">Image: </label>
+            <input type="text" class="form-control" asp-for="Image" id="Image" placeholder="Image of Product">
+            <span asp-validation-for="Image" class="text-danger"></span>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col">
+                <label asp-for="Price" class="form-label text-light">Price: </label>
+                <input type="text" class="form-control" asp-for="Price" id="Price" placeholder="Price of Product">
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Stock" class="control-label"></label>
-                <input asp-for="Stock" class="form-control" />
+            <div class="col">
+                <label asp-for="Stock" class="form-label text-light">Stock: </label>
+                <input type="text" class="form-control" asp-for="Stock" id="Stock" placeholder="How much in Stock of Products">
                 <span asp-validation-for="Stock" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <input asp-for="CategoryId" class="form-control" />
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary"/>
-            </div>
-        </form>
-    </div>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="CategoryId" class="form-label text-light">Category: </label>
+            <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+        </div>
+
+        <div class="d-flex gap-5 mt-5">
+            <button type="submit" class="btn btn-success w-50">Edit</button>
+            <a class="btn btn-info w-50" asp-controller="Products" asp-action="Index">Back To List</a>
+        </div>
+    </form>
 </div>
-<div>
-    <a asp-action="Index">Back To List</a>
-</div>
+<br />
+<br />
+<br />
