--- a/CleanArchMvc.WebUI/Views/Products/Index.cshtml
+++ b/CleanArchMvc.WebUI/Views/Products/Index.cshtml
@@ -17,7 +17,7 @@
     <div class="col-md-12">
         <div>
             <div class="pull-left">
-                <a asp-action="Create" class="btn btn-primary">
+                <a asp-action="Create" class="btn btn-success">
                     <span title="Add Product" class="fas fa-plus">Add products</span>
                 </a>
             </div>
@@ -26,7 +26,7 @@
 </div>
 <br />
 <div class="panel panel-default">
-    <table class="table table-striped">
+    <table class="table table-hover table-primary">
         <thead>
             <tr>
                 <th>
@@ -90,3 +90,6 @@
         </tbody>
     </table>
 </div>
+<br />
+<br />
+<br />
