--- a/CleanArchMvc.WebUI/Views/Shared/_LoginPartial.cshtml
+++ b/CleanArchMvc.WebUI/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,12 @@
 ﻿@if(Context.User.Identity.IsAuthenticated)
 {
     <li class="nav-item">
-        <a class="nav-link text-capitalize" asp-area="" asp-controller="Account" asp-action="Logout" style="color: green">@Context.User.Identity.Name - Logout</a>
+        <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Logout">@Context.User.Identity.Name - Logout</a>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-capitalize" asp-area="" asp-controller="Account" asp-action="Login" style="color: green">Login</a>
+        <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
     </li>
 }
