--- a/CleanArchMvc.WebUI/Views/Categories/Create.cshtml
+++ b/CleanArchMvc.WebUI/Views/Categories/Create.cshtml
@@ -3,13 +3,47 @@
     ViewData["Title"] = "Register new Category";
 }
 
+
+<div class="container bg-primary p-5 rounded-3 w-50">
+
+    <div class="mb-3 text-center">
+        <h1 class="text-light">Register new Category</h1>
+    </div>
+
+    <form method="post" asp-controller="Categories" asp-action="Create">
+        <div class="form-horizontal">
+            <hr />
+            <div asp-validation-summary="All" class="text-danger"></div>
+
+            <div class="mb-3">
+                <label asp-for="Name" class="form-label text-light">Name: </label>
+                <input type="text" class="form-control" asp-for="Name" id="Name" placeholder="Name of Category">
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+
+            <br />
+            <div class="form-group">
+                <div class="col-md-offset-2-col-md-10">
+                    <input type="submit" value="Create" class="btn btn-success" />
+                    <a asp-action="Index" class="btn btn-info">Back To List</a>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+<br />
+<br />
+<br />
+
+
+@*
 <h2>@ViewData["Title"]</h2>
 <form asp-action="Create" method="post">
     <div class="form-horizontal">
         <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
+        <div asp-validation-summary="All" class="text-danger"></div>
 
-    <div class="form-group"></div>
+        <div class="form-group"></div>
         <label asp-for="Name" class="col-md-2 control-label"></label>
         <div class="col-md-10">
             <input asp-for="Name" class="form-control" />
@@ -24,4 +58,4 @@
             <a asp-action="Index" class="btn btn-info">Back To List</a>
         </div>
     </div>
-</form>
+</form> *@
