--- a/CleanArchMvc.WebUI/Views/Products/Create.cshtml
+++ b/CleanArchMvc.WebUI/Views/Products/Create.cshtml
@@ -24,7 +24,7 @@
 
         <div class="mb-3">
             <label asp-for="Image" class="form-label text-light">Image: </label>
-            <input type="text" class="form-control" asp-for="Image" id="Image" placeholder="Image of Product">
+            <input type="text" class="form-control" asp-for="Image" id="Image" placeholder="Image url of product">
             <span asp-validation-for="Image" class="text-danger"></span>
         </div>
 
