--- a/CleanArchMvc.WebUI/Views/Products/Index.cshtml
+++ b/CleanArchMvc.WebUI/Views/Products/Index.cshtml
@@ -20,6 +20,7 @@
                 <a asp-action="Create" class="btn btn-success">
                     <span title="Add Product" class="fas fa-plus">Add products</span>
                 </a>
+                <a class="btn btn-info mx-2" asp-controller="Products" asp-action="Export">Export File</a>
             </div>
         </div>
     </div>
