--- a/CleanArchMvc.WebUI/Views/Account/Register.cshtml
+++ b/CleanArchMvc.WebUI/Views/Account/Register.cshtml
@@ -1,5 +1,46 @@
 ﻿@model CleanArchMvc.WebUI.Models.RegisterViewModel
-<h2>Register User</h2>
+
+<div class="container bg-primary p-5 rounded-3 w-50">
+
+    <div class="mb-3 text-center">
+        <h1 class="text-light">Register User</h1>
+    </div>
+
+    <form method="post" asp-controller="Account" asp-action="Register">
+        <div class="form-horizontal">
+            <hr />
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label class="text-light" asp-for="Email"></label>
+                <input asp-for="Email" class="form-control" placeholder="Enter the E-mail account for register" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label class="text-light" asp-for="Password"></label>
+                <input asp-for="Password" class="form-control" placeholder="Enter the password account" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label class="text-light" asp-for="ConfirmPassword"></label>
+                <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm the password account" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <button type="submit" class="btn btn-dark">Register</button>
+                    <a asp-controller="Home" asp-action="Index" class="btn btn-info">Return</a>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+<br />
+<br />
+<br />
+
+
+@* <h2>Register User</h2>
 <div class="row">
     <div class="col-md-12">
         <form asp-controller="Account" asp-action="Register" method="post">
@@ -23,7 +64,7 @@
             <a asp-controller="Home" asp-action="Index" class="btn btn-link">Return</a>
         </form>
     </div>
-</div>
+</div> *@
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
