--- a/CleanArchMvc.WebUI/Views/Categories/Index.cshtml
+++ b/CleanArchMvc.WebUI/Views/Categories/Index.cshtml
@@ -17,7 +17,7 @@
     <div class="col-md-12">
         <div>
             <div class="pull-left">
-                <a asp-action="Create" class="btn btn-primary">
+                <a asp-action="Create" class="btn btn-success">
                     <span title="Register new" class="fas fa-plus"></span> Register New
                 </a>
             </div>
@@ -26,7 +26,7 @@
 </div>
 <br />
 <div class="panel panel-default">
-    <table class="table table-striped">
+    <table class="table table-hover table-primary">
         <thead>
             <tr>
                 <th>
