--- a/CleanArchMvc.WebUI/Views/Shared/_Layout.cshtml
+++ b/CleanArchMvc.WebUI/Views/Shared/_Layout.cshtml
@@ -31,6 +31,12 @@
                         <li class="nav-item">
                             <a class="nav-link active text-light" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-light" asp-area="" asp-controller="Products" asp-action="API">API products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-light" asp-area="" asp-controller="Categories" asp-action="API">API Categories</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         @await Html.PartialAsync("_LoginPartial")
